--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ python-multipart==0.0.6
 Pillow==10.1.0
 opencv-python-headless==4.8.1.78
 torch==2.1.1
-transformers==4.49.0
+transformers==4.45.0
 requests==2.31.0
 numpy==1.24.3
 av==11.0.0
-git+https://github.com/huggingface/transformers@smolvlm
-git+https://github.com/Blaizzy/mlx-vlm@smolvlm
+accelerate==0.24.1
+sentencepiece==0.1.99
